@@ -1,5 +1,7 @@
 *SVN*
 
+* Time, Date and DateTime #advance accept :weeks option.  #9866 [Geoff Buesing]
+
 * Fix Time#years_ago and #years_since from leap days.  #9865 [Geoff Buesing]
 
 * Time and DateTime#advance accept :hours, :minutes, and :seconds options.  #9825 [Geoff Buesing]
